--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "watchify": "^2.2.1"
   },
   "dependencies": {
-    "fluxxor": "^1.5.1",
     "react": "^0.12.2",
-    "react-router": "^0.11.6"
+    "react-router": "^0.11.6",
+    "reflux": "^0.2.5"
   }
 }
